# housing-policy-dashboard

./: .gitignore  README.md  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/app/: layout.jsx  page.jsx
dashboard/public/: proportional_rent_reduction.html
dashboard/public/data/: proportional_rent_reduction.json
dashboard/src/components/: BaselineTab.jsx  MethodologyTab.jsx  ReformTab.jsx
dashboard/src/lib/: dataHelpers.js  formatters.js
data/: rent_control_results.json
docs/: dynamic-model-extension.md
src/rent_control/: analysis.py  cli.py  pipeline.py  proportional_rent_reduction.py
tests/: test_analysis.py
